--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@
 header {
     background-image: url("./img/bgc.jpg");
     background-size: 100%;
-    height: 800px;
+    height: 600px;
     background-repeat: no-repeat;
     img {
         position: relative;
@@ -15,30 +15,53 @@ header {
     ul {
         list-style: none;
         display: flex;
-        position: relative;
-        left: 58%;
-        top: -25px;
+        position: absolute;
+        left: 50%;
+        top: 20px;
         color: white;
         li {
-            font-size: 20px;
+            text-transform: uppercase;
+            font-size: 17px;
             margin: 10px 30px 10px 10px;
             a {
-                color: white;
+                color: black;
                 text-decoration: none;
                 
             }
             a:hover {
+                color: white;
                 cursor: pointer;
                 border-bottom: 1px solid white;
             }
         }
     }
     h1 {
-        font-size: 40px;
-        width: 900px;
         text-align: center;
         align-items: center;
+        color: white;
         position: relative;
-        left: 20%;
+        left: 22%;
+        letter-spacing: 0.8px;
+        width: 900px;
+        font-size: 45px;
+        margin-top: 50px;
     }
+    h3 {
+        color: white;
+        text-align: center;
+        align-items: center;
+        margin-top: 30px;
+        width: 600px;
+        position: relative;
+        left: 31%;
+        letter-spacing: 0.8px;
+    }
+    
+}
+.line {
+    position: relative;
+    left: 45%;
+    border-bottom: 3px solid rgb(226, 232, 134);
+    width: 200px;
+    height: 20px;
 }
