--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header {
-  background-image: url("./img/bgc.jpg");
+  background-image: url("./img/bgc1.jpg");
   background-size: 100%;
   height: 600px;
   background-repeat: no-repeat;
@@ -28,18 +28,19 @@ header ul li {
   margin: 10px 30px 10px 10px;
 }
 header ul li a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 header ul li a:hover {
-  color: white;
+  color: rgb(226, 232, 134);
   cursor: pointer;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgb(226, 232, 134);
 }
 header h1 {
   text-align: center;
   align-items: center;
   color: white;
+  text-shadow: rgb(0, 0, 0) 1px 0 20px;
   position: relative;
   left: 22%;
   letter-spacing: 0.8px;
@@ -51,11 +52,16 @@ header h3 {
   color: white;
   text-align: center;
   align-items: center;
+  text-shadow: rgb(0, 0, 0) 1px 0 20px;
   margin-top: 30px;
   width: 600px;
   position: relative;
   left: 31%;
   letter-spacing: 0.8px;
+}
+header img {
+  width: 150px;
+  height: 150px;
 }
 
 .line {
@@ -64,4 +70,22 @@ header h3 {
   border-bottom: 3px solid rgb(226, 232, 134);
   width: 200px;
   height: 20px;
+}
+
+.preference {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 130px;
+}
+.preference div {
+  width: 300px;
+  height: 200px;
+}
+.preference div p {
+  width: 200px;
+  color: white;
+  letter-spacing: 0.3em;
+  text-align: center;
+  margin-left: 20px;
 }/*# sourceMappingURL=style.css.map */
