--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   box-sizing: border-box;
   overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
 }
 
 header {
@@ -42,9 +43,9 @@ header h1 {
   color: white;
   text-shadow: rgb(0, 0, 0) 1px 0 20px;
   position: relative;
-  left: 22%;
+  left: 19%;
   letter-spacing: 0.8px;
-  width: 900px;
+  width: 1000px;
   font-size: 45px;
   margin-top: 50px;
 }
@@ -59,10 +60,6 @@ header h3 {
   left: 31%;
   letter-spacing: 0.8px;
 }
-header img {
-  width: 150px;
-  height: 150px;
-}
 
 .line {
   position: relative;
@@ -72,20 +69,104 @@ header img {
   height: 20px;
 }
 
-.preference {
+main {
+  margin-bottom: 100px;
+}
+main h1 {
+  text-align: center;
+  align-items: center;
+  color: black;
+  position: relative;
+  left: 21%;
+  letter-spacing: 0.8px;
+  width: 900px;
+  font-size: 35px;
+  margin-top: 50px;
+}
+main h2 {
+  text-align: center;
+  align-items: center;
+  color: black;
+  position: relative;
+  letter-spacing: 0.8px;
+  left: 15%;
+  width: 1200px;
+  font-size: 20px;
+  margin-top: 30px;
+}
+main .production {
+  display: flex;
+  margin-left: 235px;
+  margin-top: 50px;
+}
+main .production p {
+  width: 500px;
+  font-size: 17px;
+  margin-right: 34px;
+  letter-spacing: 1.5px;
+}
+main .production img {
+  width: 600px;
+  height: 450px;
+  position: absolute;
+}
+main .bgc {
+  width: 600px;
+  height: 450px;
+  background-color: rgb(255, 180, 40);
+  margin-left: 35px;
+  margin-top: 35px;
+}
+
+.section1 {
+  background-image: url("./img/kitchen2.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.section1 h1 {
+  text-align: center;
+  align-items: center;
+  color: black;
+  position: relative;
+  left: 21%;
+  letter-spacing: 0.8px;
+  width: 900px;
+  font-size: 35px;
+  margin-top: 50px;
+}
+.section1 h2 {
+  text-align: center;
+  align-items: center;
+  color: white;
+  position: relative;
+  letter-spacing: 0.8px;
+  text-shadow: rgb(0, 0, 0) 1px 0 20px;
+  left: 15%;
+  width: 1200px;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.benefits {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 130px;
+  flex-wrap: wrap;
 }
-.preference div {
-  width: 300px;
-  height: 200px;
-}
-.preference div p {
-  width: 200px;
-  color: white;
-  letter-spacing: 0.3em;
+.benefits div {
+  background-color: rgba(255, 247, 232, 0.7);
+  width: 220px;
+  height: 250px;
+  margin: 20px;
+  padding: 10px;
   text-align: center;
-  margin-left: 20px;
+  border-radius: 50px;
+}
+.benefits img {
+  margin-top: 36px;
+  width: 120px;
+  height: 120px;
+}
+.benefits p {
+  margin-top: 10px;
 }/*# sourceMappingURL=style.css.map */
