--- a/style.css
+++ b/style.css
@@ -169,4 +169,39 @@ main .bgc {
 }
 .benefits p {
   margin-top: 10px;
+}
+
+h1 {
+  text-align: center;
+  align-items: center;
+  color: black;
+  position: relative;
+  left: 20%;
+  letter-spacing: 0.8px;
+  width: 900px;
+  font-size: 35px;
+  margin-top: 50px;
+}
+
+.slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-slider {
+  position: relative;
+  background-repeat: no-repeat;
+  width: 1000px;
+  height: 500px;
+  margin: 10px 150px;
+}
+
+.left, .right {
+  width: 50px;
+  height: 50px;
+}
+
+.left:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
